Added a modern header

--- a/index.html
+++ b/index.html
@@ -8,23 +8,61 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Ben</title>
 </head>
 
 <body>
-
+    <!--HEADER-->
     <header>
 
-    </header>
+        <div class="row no-gutters">
 
+            <a href="index.html" class="col-md-4 logo">
+
+            </a>
+
+            <div class="col-md-8">
+                <div class="row no-gutters bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Ben Tonks</h1>
+                        <h2 class="title">Full Stack Developer</h2>
+                    </div>
+                </div>
+
+                <div class="row no-gutters">
+                    <div class="col">
+                        <ul id="nav" class="list-inline menu-container">
+                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"><a class="hvr-sweep-to-bottom" href="#"><i class="fa fa-home" aria-hidden="true"></i> <span>Home</span></a> 
+                            </li>
+                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"><a class="hvr-sweep-to-bottom" href="#"><i class="fa fa-graduation-cap" aria-hidden="true"></i> <span>Resume</span></a> 
+                            </li>
+                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"><a class="hvr-sweep-to-bottom" href="#"><i class="fa fa-comment" aria-hidden="true"></i> <span>Contact</span></a> 
+                            </li>
+                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"> <a class="hvr-sweep-to-bottom" href="#"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a> 
+                            </li>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </header>
+    <!--/.HEADER-->
+
+    <!--SECTION-->
     <section>
 
     </section>
+    <!--/.SECTION-->
 
+    <!--FOOTER-->
     <footer>
 
     </footer>
-
+    <!--/.FOOTER-->
 </body>
 
 </html>
