--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"><a class="hvr-sweep-to-bottom" href="contact.html"><i class="fa fa-comment" aria-hidden="true"></i> <span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"> <a class="hvr-sweep-to-bottom" href="assets/C.V/sample-cv.pdf"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"> <a class="hvr-sweep-to-bottom" href="assets/C.V/sample-cv.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
                             </li>
                         </ul>
@@ -89,7 +89,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
-                    Need a printable bersion of my CV? Download it here.
+                    Need a printable version of my CV? Download it here.
                     <a href="assets/C.V/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
